--- a/src/app/components/settings/styles/desktop-view-settings.less
+++ b/src/app/components/settings/styles/desktop-view-settings.less
@@ -1,505 +1,551 @@
+.settings-container {
+  position: relative;
+  background: @background-white;
+  height: 575px;
+  width: 620px;
+  padding: 0 10px;
+  font-size: 12px;
+}
+
+.ngdialog-overlay {
+  background: fade(@background-black, 40%);
+  display: block;
+}
+
+.ngdialog-content {
+  position: absolute;
+  top: ~"calc(50% - 290px)";
+  height: 575px;
+  width: 620px;
+  left: ~"calc(50% - 310px)";
+  padding: 0 10px;
+  font-size: 12px;
+  border-top: none;
+}
+
+.ngdialog-close {
+  display: none;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  width: 10px;
+  height: 10px;
+  font-size: 0;
+  cursor: pointer;
+
+  &::before {
+    content: 'X';
+    font-size: 10px;
+  }
+}
+
+.endpoints-wrapper {
+  height: auto;
+}
+
+
 .settings-note {
-    padding: 0;
+  padding: 0;
 }
 
 .settings-title {
-    display: block;
-    font-size: 14px;
-    text-align: center;
-    border-bottom: 1px solid @input-borders-color;
-    line-height: 40px;
+  display: block;
+  font-size: 14px;
+  text-align: center;
+  border-bottom: 1px solid @input-borders-color;
+  line-height: 40px;
 }
 
 .settings-back {
-    display: none;
+  display: none;
 }
 
 .settings-navigation {
-    display: block;
-    padding: 0;
-    width: 126px;
-    border-right: 1px solid @input-borders-color;
-    float: left;
+  display: block;
+  padding: 0;
+  width: 126px;
+  border-right: 1px solid @input-borders-color;
+  float: left;
 }
 
 .settings-navigation-item {
-    width: auto;
-    line-height: 30px;
-    transition: background 0.3s ease, color 0.3s ease;
-    padding: 0 10px;
+  width: auto;
+  line-height: 30px;
+  transition: background 0.3s ease, color 0.3s ease;
+  padding: 0 10px;
 
-    &.current {
-        color: @text-color-light;
-        background: @background-dark;
-    }
+  &.current {
+    color: @text-color-light;
+    background: @background-dark;
+  }
 
-    &.caution {
-        &::before {
-            content: '';
-            position: absolute;
-            width: 12px;
-            height: 12px;
-            margin-top: 3px;
-            margin-left: -16px;
-            border-radius: 100%;
-            background: @highlight-3;
-        }
+  &.caution {
+    &::before {
+      content: '';
+      position: absolute;
+      width: 12px;
+      height: 12px;
+      margin-top: 3px;
+      margin-left: -16px;
+      border-radius: 100%;
+      background: @highlight-3;
     }
+  }
 }
 
 .password-settings-mobile {
-    border-top: 1px solid @input-borders-color;
+  border-top: 1px solid @input-borders-color;
 }
 
 .tab.settings-navigation-item.caution.client-settings-mobile {
-    padding: 15px 3px 15px 30px;
+  padding: 15px 3px 15px 30px;
 
-    &::before {
-        content: '';
-        position: absolute;
-        width: 12px;
-        height: 12px;
-        margin-top: 3px;
-        margin-left: -16px;
-        border-radius: 100%;
-        background: @highlight-3;
-    }
+  &::before {
+    content: '';
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    margin-top: 3px;
+    margin-left: -16px;
+    border-radius: 100%;
+    background: @highlight-3;
+  }
 }
 
 .separator {
-    margin: 20px -10px;
-    width: 100%;
-    height: 1px;
-    background: @input-borders-color;
+  margin: 20px -10px;
+  width: 100%;
+  height: 1px;
+  background: @input-borders-color;
 }
 
 .settings-page {
-    display: block;
-    height: ~"calc(100% - 91px)";
-    padding: 20px;
-    font-size: 12px;
-    overflow: auto;
+  display: block;
+  height: ~"calc(100% - 91px)";
+  padding: 20px;
+  font-size: 12px;
+  overflow: auto;
 
-    .default-checkbox {
-        margin: 10px 0;
-    }
+  .default-checkbox {
+    margin: 10px 0;
+  }
 }
 
 .settings-item {
-    margin-bottom: 10px;
-    line-height: 30px;
-    display: inline-block;
+  margin-bottom: 10px;
+  line-height: 30px;
+  display: inline-block;
 
-    &>span {
-        font-size: 12px;
-        width: 180px;
-        line-height: 18px;
-    }
+  &>span {
+    font-size: 12px;
+    width: 180px;
+    line-height: 18px;
+  }
 
-    &.tier-two>span {
-        padding-left: 20px;
-    }
+  &.tier-two>span {
+    padding-left: 20px;
+  }
 
-    .default-select,
-    .default-input,
-    .static {
-        font-size: 12px;
-        width: 215px;
-        float: right;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        position: initial;
+  .default-select,
+  .default-input,
+  .static {
+    font-size: 12px;
+    width: 215px;
+    float: right;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    position: initial;
 
-        ul {
-            min-width: 215px;
-            max-height: 400px;
-            overflow-y: auto;
-        }
+    ul {
+      min-width: 215px;
+      max-height: 400px;
+      overflow-y: auto;
     }
-    .default-input .error-input {
-        border: 1px solid @highlight-1;
-    }
+  }
+  .default-input .error-input {
+    border: 1px solid @highlight-1;
+  }
 
-    .default-input {
-        height: 30px;
-    }
+  .default-input {
+    height: 30px;
+  }
 }
 
 .invitation-language {
-    ul {
-        width: 215px;
-    }
+  ul {
+    width: 215px;
+  }
 }
 
 .settings-buttons {
-    display: block;
-    padding: 10px 0;
-    text-align: right;
+  display: block;
+  padding: 10px 0;
+  text-align: right;
 }
 
 //TODO: Add this div with text Optional on the top of list of availiable optional downloads
 .optional-title {
-    width: 100%;
-    margin: 25px 0 10px 0;
-    color: @text-color;
+  width: 100%;
+  margin: 25px 0 10px 0;
+  color: @text-color;
 }
 
 .required-download,
 .optional-download {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 16px;
-    background: transparent;
-    color: @text-color;
-    text-align: center;
-    cursor: pointer;
-    border: 1px solid @input-borders-color;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 16px;
+  background: transparent;
+  color: @text-color;
+  text-align: center;
+  cursor: pointer;
+  border: 1px solid @input-borders-color;
 
-    p {
-        margin: 0;
-    }
+  p {
+    margin: 0;
+  }
 }
 
 table.client {
-    border-collapse: collapse;
-    width: 100%;
-    min-width: 400px;
-    margin: 24px auto;
+  border-collapse: collapse;
+  width: 100%;
+  min-width: 400px;
+  margin: 24px auto;
 
-    tr {
-        word-wrap: break-word;
+  tr {
+    word-wrap: break-word;
 
-        &:hover {
-            background: fadeout(@background-black, 90%)
-        }
-
-        th {
-            text-align: center;
-            line-height: 30px;
-            color:@background-white;
-            font-weight: 400;
-            background: @text-color-med;
-            box-shadow: -20px 0 @text-color-med,
-                        20px 0 @text-color-med;
-
-            &:first-child {
-                width: 30%;
-            }
-            &:nth-child(2) {
-                width: 30%;
-            }
-            &:nth-child(3) {
-                width: 20%;
-            }
-            &:last-child {
-                width: 20%;
-            }
-        }
-
-        td {
-            padding: 15px 3px;
-            border-bottom: 1px solid @text-color-med;
-
-            span {
-                line-height: 25px;
-                color: @links-color-mobile;
-                font-weight: 700;
-                text-decoration: underline;
-                cursor: pointer;
-                display: block;
-            }
-
-            &:nth-child(3),
-            &:last-child {
-                text-align: center;
-            }
-        }
+    &:hover {
+      background: fadeout(@background-black, 90%)
     }
+
+    th {
+      text-align: center;
+      line-height: 30px;
+      color:@background-white;
+      font-weight: 400;
+      background: @text-color-med;
+      box-shadow: -20px 0 @text-color-med,
+      20px 0 @text-color-med;
+
+      &:first-child {
+        width: 30%;
+      }
+      &:nth-child(2) {
+        width: 30%;
+      }
+      &:nth-child(3) {
+        width: 20%;
+      }
+      &:last-child {
+        width: 20%;
+      }
+    }
+
+    td {
+      padding: 15px 3px;
+      border-bottom: 1px solid @text-color-med;
+
+      span {
+        line-height: 25px;
+        color: @links-color-mobile;
+        font-weight: 700;
+        text-decoration: underline;
+        cursor: pointer;
+        display: block;
+      }
+
+      &:nth-child(3),
+      &:last-child {
+        text-align: center;
+      }
+    }
+  }
 }
 
 .centered {
-    display: none;
+  display: none;
 }
 
 .settings-wrapper{
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 
-    .settings-tabs{
-        display: inline-block;
-        width: 150px;
-    }
+  .settings-tabs{
+    display: inline-block;
+    width: 150px;
+  }
 
-    .settings-main-container{
-        width: 452px;
-        height: 482px;
-    }
+  .settings-main-container{
+    width: 452px;
+    height: 482px;
+  }
 }
 
 
 // Patch for Accordeon styles:
 .mobile-accordeon.settings .accordeon-name {
-    display: none;
+  display: none;
 }
 
 .mobile-accordeon.settings .tab.settings-navigation-item {
-    width: 150px;
-    white-space: normal;
-    hyphens: auto;
-    line-height: 20px;
-    padding: 15px 3px 15px 10px;
+  width: 150px;
+  white-space: normal;
+  hyphens: auto;
+  line-height: 20px;
+  padding: 15px 3px 15px 10px;
 }
 
 .mobile-accordeon .tab-content {
-    width: 456px;
-    padding: 20px;
-    top: 40px;
-    height: inherit;
-    border-left: 1px solid @input-borders-color;
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
-    &.client-settings-mobile-content {
-        align-items: center;
-    }
+  width: 456px;
+  padding: 20px;
+  top: 40px;
+  height: inherit;
+  border-left: 1px solid @input-borders-color;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  &.client-settings-mobile-content {
+    align-items: center;
+  }
 
-    .refresh{
-        text-align: end;
-        color: #3F93FC;
-        margin: 0;
-        cursor: pointer;
-    }
+  .refresh{
+    text-align: end;
+    color: #3F93FC;
+    margin: 0;
+    cursor: pointer;
+  }
 }
 
 .mobile-accordeon.settings {
-    label.default-checkbox {
-        margin: 10px 0;
-        width: 100%;
-        position: relative;
+  label.default-checkbox {
+    margin: 10px 0;
+    width: 100%;
+    position: relative;
 
-        &.static {
-            margin: 0;
-            width: 215px;
-        }
+    &.static {
+      margin: 0;
+      width: 215px;
     }
+  }
 }
 
 .settings-buttons {
-    display: block;
-    padding: 10px 0 10px 33px;
-    text-align: right;
-    bottom: 0;
-    position: absolute;
-    margin-left: 150px;
-    border-left: 1px solid @input-borders-color;
-    margin-bottom: 1px;
-    background: @background-white;
+  display: block;
+  padding: 10px 0 10px 33px;
+  text-align: right;
+  bottom: 0;
+  position: absolute;
+  margin-left: 150px;
+  border-left: 1px solid @input-borders-color;
+  margin-bottom: 1px;
+  background: @background-white;
 }
 
 .settings-avatar {
-    padding: 30px 30px 16px;
-    .avatar-wrapper {
-        margin-left: 0;
-        .delete-avatar {
-            display: block;
-            text-align: center;
-            color: @text-color-med;
-            cursor: default;
-            opacity: 0;
-            transition: all 0.3s ease;
-        }
-        &:hover .show-delete {
-            cursor: pointer;
-            opacity: 1;
-            &:hover {
-                color: @highlight-1;
-            }
-        }
+  padding: 30px 30px 16px;
+  .avatar-wrapper {
+    margin-left: 0;
+    .delete-avatar {
+      display: block;
+      text-align: center;
+      color: @text-color-med;
+      cursor: default;
+      opacity: 0;
+      transition: all 0.3s ease;
     }
-    .avatar-options {
-        padding-top: 15px;
-        width: ~"calc(80% - 20px)";
-        .new-avatar {
-            display: block;
-            color: @links-color-mobile;
-            position: relative;
+    &:hover .show-delete {
+      cursor: pointer;
+      opacity: 1;
+      &:hover {
+        color: @highlight-1;
+      }
+    }
+  }
+  .avatar-options {
+    padding-top: 15px;
+    width: ~"calc(80% - 20px)";
+    .new-avatar {
+      display: block;
+      color: @links-color-mobile;
+      position: relative;
 
-            .upload-avatar-image {
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                top: 0;
-                left: 0;
-                opacity: 0;
-            }
-        }
+      .upload-avatar-image {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        opacity: 0;
+      }
     }
-    .mobile-options-button {
-        display: none;
-    }
+  }
+  .mobile-options-button {
+    display: none;
+  }
 }
 
 .ngdialog-confirm-delete-user-photo {
-    .delete-picture-title {
-        margin-bottom: 10px;
-    }
-    .delete-picture-description {
-        font-size: 13px;
-        color: @text-color-med;
-        margin-bottom: 20px;
-    }
+  .delete-picture-title {
+    margin-bottom: 10px;
+  }
+  .delete-picture-description {
+    font-size: 13px;
+    color: @text-color-med;
+    margin-bottom: 20px;
+  }
 }
 
 .preferences{
-    padding-left: 40px;
+  padding-left: 40px;
 
-    label{
-        padding-left: 0;
+  label{
+    padding-left: 0;
 
-        span{
-            font-size: 15px;
-        }
+    span{
+      font-size: 15px;
     }
+  }
 
 
-    .explanation{
-        font-size: 13px;
-        color: @blue-gray;
-    }
+  .explanation{
+    font-size: 13px;
+    color: @blue-gray;
+  }
 }
 
 .client-title{
-    text-align: center;
-    width: 100%;
+  text-align: center;
+  width: 100%;
 }
 
 .remove-client-info{
-    color: #E7112C;
-    text-align: center;
-    cursor: pointer;
-    text-decoration: underline;
-    margin: 20px 0;
+  color: #E7112C;
+  text-align: center;
+  cursor: pointer;
+  text-decoration: underline;
+  margin: 20px 0;
 }
 .default-button.client-download-button{
-    height: 40px;
-    margin: 0 auto;
-    border-radius: 15px;
-    background-color: #157BFB;
-    font-size: 13px;
-    cursor: pointer;
-    width: auto;
-    max-width: 90%;
-    min-width: 68%;
-    display: inline-block;
-    padding-right: 20px;
-    padding-left: 20px;
-    span {
-        line-height: 40px;
-    }
+  height: 40px;
+  margin: 0 auto;
+  border-radius: 15px;
+  background-color: #157BFB;
+  font-size: 13px;
+  cursor: pointer;
+  width: auto;
+  max-width: 90%;
+  min-width: 68%;
+  display: inline-block;
+  padding-right: 20px;
+  padding-left: 20px;
+  span {
+    line-height: 40px;
+  }
 }
 
 .download-plugin{
-    text-decoration: underline;
-    cursor: pointer;
-    color: #000000;
-    text-align: center;
-    margin: 25px 0;
+  text-decoration: underline;
+  cursor: pointer;
+  color: #000000;
+  text-align: center;
+  margin: 25px 0;
 }
 
 .no-client-info{
-    text-align: center;
-    margin-bottom: 20px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .tab-content .advanced-settings{
-    padding-left: 30px;
+  padding-left: 30px;
 
-    .settings-item>span{
-        width: 140px;
-    }
+  .settings-item>span{
+    width: 140px;
+  }
 
-    .settings-item{
-        .default-select{
-            margin-right: 20px;
-        }
+  .settings-item{
+    .default-select{
+      margin-right: 20px;
     }
+  }
 
-    .preferences{
-        padding-left: 20px;
-    }
+  .preferences{
+    padding-left: 20px;
+  }
 
-    &.advanced-settings-logs {
-        display: flex;
-        flex-direction: column;
-    }
+  &.advanced-settings-logs {
+    display: flex;
+    flex-direction: column;
+  }
 
-    .no-logs {
-        display: inline-block;
-        font-size: 14px;
-        margin: 8px 0 8px 8px;
-    }
+  .no-logs {
+    display: inline-block;
+    font-size: 14px;
+    margin: 8px 0 8px 8px;
+  }
 
-    .send-logs {
-        display: inline-block;
-        cursor: pointer;
-        text-decoration: underline;
-        color: @links-color-mobile;
-        font-size: 14px;
-        margin: 8px 0 8px 8px;
-    }
+  .send-logs {
+    display: inline-block;
+    cursor: pointer;
+    text-decoration: underline;
+    color: @links-color-mobile;
+    font-size: 14px;
+    margin: 8px 0 8px 8px;
+  }
 
-    .save-logs {
-        display: inline-block;
-        cursor: pointer;
-        text-decoration: underline;
-        color: @links-color-mobile;
-        font-size: 14px;
-        margin: 8px 0 8px 8px;
-    }
+  .save-logs {
+    display: inline-block;
+    cursor: pointer;
+    text-decoration: underline;
+    color: @links-color-mobile;
+    font-size: 14px;
+    margin: 8px 0 8px 8px;
+  }
 }
 
 .tab-content .preferences{
-    font-size: 13px;
-    span{
-        font-size: 15px;
-    }
+  font-size: 13px;
+  span{
+    font-size: 15px;
+  }
 }
 
 .ngdialog.ngdialog-theme-settings.scroll{
-    overflow: scroll;
+  overflow: scroll;
 }
 
 .ngdialog-theme-log.ngdialog-pin-warning{
-    .ngdialog-content{
-        left: ~"calc(50% - 170px)";
-    }
+  .ngdialog-content{
+    left: ~"calc(50% - 170px)";
+  }
 }
 
 
 .user-delegated{
-    .user{
-        padding: 9px 5px;
-        margin-bottom: 0;
+  .user{
+    padding: 9px 5px;
+    margin-bottom: 0;
 
-        .user-info{
-            width: 70%;
-        }
-
-        .remove-item{
-            display: none;
-            cursor: pointer;
-        }
+    .user-info{
+      width: 70%;
     }
 
-    .user:hover{
-        background-color: #EDF4FB;
-        .user-info{
-            width: 70%;
-        }
-
-        .remove-item{
-            display: inline-block;
-        }
+    .remove-item{
+      display: none;
+      cursor: pointer;
     }
+  }
+
+  .user:hover{
+    background-color: #EDF4FB;
+    .user-info{
+      width: 70%;
+    }
+
+    .remove-item{
+      display: inline-block;
+    }
+  }
 }
