working on user settings

--- a/src/app/components/settings/styles/desktop-view-settings.less
+++ b/src/app/components/settings/styles/desktop-view-settings.less
@@ -1,5 +1,7 @@
 .settings-container {
-  position: relative;
+  position: absolute;
+  top: calc(50% - 290px);
+  left: calc(50% - 310px);
   background: @background-white;
   height: 575px;
   width: 620px;
@@ -150,7 +152,7 @@
   .default-input,
   .static {
     font-size: 12px;
-    width: 215px;
+    width: 215px !important;
     float: right;
     white-space: nowrap;
     overflow: hidden;
