--- a/src/app/components/settings/templates/user-settings.component.html
+++ b/src/app/components/settings/templates/user-settings.component.html
@@ -64,7 +64,7 @@ intended publication of such source code.
             <app-custom-select (ngModelChange)="voicePromptLanguageChanged($event)" [options]="voicePromptLanguage.options" [model]="voicePromptLanguage.selected" key="id" value="localizedDisplayName" [disabled]="!userSettingsService.portalResources.ottMode"></app-custom-select>
           </div>
 
-          <div class="settings-item participant-id" *ngIf="!isMultiTenant">
+          <div class="settings-item participant-id" *ngIf="true">
             <span>{{'SETTINGS.USER_TAB.PARTICIPANT_ID' | translate}}</span>
             <div class="password-input">
               <input #participantId class="participant-id-field default-input"
@@ -127,7 +127,7 @@ intended publication of such source code.
 <!---->
         <div class="tab-content {{currentTab === TAB.ROOM ? '' : 'hidden'}} " *ngIf="currentTab === TAB.ROOM"
              ng-include=":: 'app/components/settings/templates/SettingsRoom.html'">
-          <form class="room-settings">
+          <form class="room-settings" [formGroup]="virtualRoomReactiveForm">
             <!-- Virtual room number -->
             <div class="settings-item  upc-room-number">
               <span>{{'SETTINGS.ROOM_TAB.ROOM_NUMBER' | translate}}</span>
@@ -256,8 +256,92 @@ intended publication of such source code.
                                  key="id"
                                  value="name"></app-custom-select>
             </div>
+            <div class="separator"></div>
+
+            <!-- Moderator pin -->
+            <div class="settings-item show-pass-wrapper">
+              <span>{{'SETTINGS.ROOM_TAB.MODERATOR_PIN' | translate}}</span>
+              <div class="password-input">
+                <input class="default-input vr-pin"
+                       #moderatorPin
+                       name="moderatorPin"
+                       (change)="moderatorPinChanged($event)"
+                       formControlName="moderatorPin"
+                       type="password"
+                       autocomplete="off"
+                       [maxLength]="moderatorPinMaxLength"
+                       only-numbers>
+                <app-show-password [inputElem]="moderatorPin" [inputValue]="data.moderatorPin"></app-show-password>
+                <!--                <show-password input-value="{{data.moderatorPin}}" input-name="moderatorPin"></show-password>-->
+              </div>
+<!--              <div class="errors">-->
+<!--                <div class="default-error" ng-if="isModeratorPinContainsSequentialOrRepeatedSymbols && isModeratorPinPatternCorrect"-->
+<!--                     translate-once="GENERAL.ERROR.INCORRECT_PIN"></div>-->
+<!--                <div class="default-error" ng-if="!isModeratorPinPatternCorrect"-->
+<!--                     translate-once="GENERAL.ERROR.PIN_MIN_LENGTH"-->
+<!--                     translate-values="{minLength: moderatorPinMinLength, maxLength: moderatorPinMaxLength}"></div>-->
+<!--              </div>-->
+            </div>
+            <label class="settings-note upc-moderator-pin-note">{{'SETTINGS.ROOM_TAB.MODERATOR_PIN_NOTE' | translate}}</label>
 
             <div class="separator"></div>
+
+            <!-- Protect meeting with a pin -->
+            <label class="default-checkbox upc-room-protect-with-pin">
+              <input type="checkbox" name="accessPinEnabled" [(ngModel)]="data.accessPinEnabled" (change)="accessPinCheckboxChanged()" [disabled]="meetingPinMinLength !== 0">
+              <span>{{'SETTINGS.ROOM_TAB.ENTRY_PIN' | translate}}</span>
+            </label>
+
+            <!-- Permanent pin -->
+            <div class="settings-item tier-two tier-two-input show-pass-wrapper upc-room-permanent-pin">
+              <span>
+                <label class="default-radio">
+                  <input type="radio"
+                       [(ngModel)]="currentRoom.oneTimePINRequired"
+                       [value]="false"
+                       (change)="pinRadioStateChanged()"
+                       [disabled]="!data.accessPinEnabled"
+                       name="pin">
+                  <span>{{'SETTINGS.ROOM_TAB.PERMANENT_PIN' | translate}}</span>
+                </label>
+              </span>
+              <div class="password-input">
+                <input [disabled]="(!data.accessPinEnabled || currentRoom.oneTimePINRequired)"
+                       name="accessPin"
+                       formControlName="accessPin"
+                       (change)="permanentPinChanged()"
+                       class="default-input vr-pin"
+                       type="password"
+                       maxlength="{{meetingPinMaxLength}}"
+                       #accessPin
+                       autocomplete="off">
+<!--                <show-password input-value="{{data.permanentPin}}" input-name="accessPin"></show-password>-->
+                <app-show-password [inputElem]="accessPin" [inputValue]="data.permanentPin"></app-show-password>
+              </div>
+<!--              <div class="errors">-->
+<!--                <div class="default-error" ng-if="isMeetingPinContainsSequentialOrRepeatedSymbols && isMeetingPinPatternCorrect"-->
+<!--                     translate-once="GENERAL.ERROR.INCORRECT_PIN"></div>-->
+<!--                <div class="default-error" ng-if="!isMeetingPinPatternCorrect && !currentRoom.oneTimePINRequired"-->
+<!--                     translate-once="GENERAL.ERROR.PIN_MIN_LENGTH"-->
+<!--                     translate-values="{minLength: meetingPinMinLength, maxLength: meetingPinMaxLength}"></div>-->
+<!--                <div class="default-error" ng-if="isMeetingPinPatternCorrect && !currentRoom.oneTimePINRequired && data.accessPinEnabled && !data.permanentPin"-->
+<!--                     translate-once="SETTINGS.ERROR.REQUIRED"></div>-->
+<!--              </div>-->
+            </div>
+
+            <!-- One-time pin -->
+            <div class="settings-item tier-two upc-room-one-time-pin">
+              <span>
+                <label class="default-radio">
+                  <input type="radio" [(ngModel)]="currentRoom.oneTimePINRequired"
+                       [value]="true"
+                       (change)="pinRadioStateChanged()"
+                       [disabled]="!data.accessPinEnabled"
+                       name="pin">
+                  <span>{{'SETTINGS.ROOM_TAB.ONETIME_PIN' | translate}}</span>
+                </label>
+              </span>
+            </div>
 
             <div class="separator"></div>
 
@@ -271,8 +355,6 @@ intended publication of such source code.
               <span *ngIf="currentRoom.protectMeetingWithParticipantId" class="settings-note">{{'SETTINGS.ROOM_TAB.PROTECTED_PARTICIPANT_ID_INFO' | translate}}</span>
 
             </div>
-
-            <div class="separator"></div>
 
             <!-- Default room -->
             <label class="default-checkbox upc-room-default-room">
@@ -357,17 +439,6 @@ intended publication of such source code.
             <div *ngIf="userSettings.conferencing.schedulable" class="separator"></div>
 
             <!-- selector for add endpoints -->
-            <tag-selector ng-if="userSettings.conferencing.schedulable"
-                          selected="currentRoom.attendees"
-                          options="filteredEndpoints"
-                          placeholder="'SETTINGS.ROOM_TAB.SEARCH_ENDPOINTS'"
-                          primary="terminalName"
-                          secondary=""
-                          tertiary=""
-                          unique-property="terminalId"
-                          callback="searchEndpointInputChanged"
-                          searching="searching">
-            </tag-selector>
             <app-tag-selector *ngIf="userSettings.conferencing.schedulable"
                               [selected]="currentRoom.attendees"
                               [options]="filteredEndpoints"
